--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,24 @@
- 
+@import "tailwindcss";
+
+@font-face {
+  font-family: "redHat";
+  src: url("./assets/fonts/RedHatText-VariableFont_wght.ttf");
+}
+
+body {
+  font-family: "redHat", sans-serif;
+}
+
+
+:root {
+
+  --color-primary: hsl(14, 86%, 42%);
+  --color-green-primary: hsl(159, 69%, 38%);
+
+  --color-rose-50: hsl(20, 50%, 98%);
+  --color-rose-100: hsl(13, 31%, 94%);
+  --color-rose-300: hsl(14, 25%, 72%);
+  --color-rose-400: hsl(7, 20%, 60%);
+  --color-rose-500: hsl(12, 20%, 44%);
+  --color-rose-900: hsl(14, 65%, 9%);
+}
